--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,3 +13,6 @@ display_listen: chart
 
 # what to display for listen when a note has been recognized
 display_quiz: note
+
+# measure frequency over slices of this duration (in secs)
+time_slice: 0.1
