--- a/config/config.yaml
+++ b/config/config.yaml
@@ -19,3 +19,9 @@ time_slice: 0.1
 
 # pitch-detection algorithm used for aubiopitch; see its man-page
 pitch_detection: yinfast
+
+# cut off below
+min_freq: 50
+
+# cur off above
+max_freq: 8000
