cents as comment choice; fixes

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,14 +5,14 @@ type: richter
 # default value
 key: c
 
-comment_listen: note
 # While listening, show comments as note or interval
+comment_listen: note
 
 # what to display for listen when a note has been recognized
 display_listen: chart
 
-# what to display for listen when a note has been recognized
-display_quiz: note
+# what to display for quiz when a note has been recognized
+display_quiz: hole
 
 # measure frequency over slices of this duration (in secs)
 time_slice: 0.1
