--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,10 +20,14 @@ time_slice: 0.1
 # pitch-detection algorithm used for aubiopitch; see its man-page
 pitch_detection: yinfast
 
+# default for preferred signature: prefer flats or sharps in display ?
+# Not used if specified scale itself has flat or sharp
+pref_sig_def: flat
+
 # cut off below
 min_freq: 50
 
-# cur off above
+# cut off above
 max_freq: 8000
 
 # minimum terminal screen size
