--- a/config/richter/scale_root_with_holes.yaml
+++ b/config/richter/scale_root_with_holes.yaml
@@ -1,11 +1,11 @@
 ---
-- "+1 IV-Chord"
-- "-1 V-Chord"
-- "-2+3 I-Chord"
-- "+4 IV-Chord"
-- "-4 V-Chord"
-- "+6 I-Chord"
-- "+7 IV-Chord"
-- "-8 V-Chord"
-- "+9 I-Chord"
-- "+10 IV-Chord"
+- "-1 chord-v"
+- "+1 chord-iv"
+- "-2+3 chord-i"
+- "+4 chord-iv"
+- "-4 chord-v"
+- "+6 chord-i"
+- "+7 chord-iv"
+- "-8 chord-v"
+- "+9 chord-i"
+- "+10 chord-iv"
