fixes for remarks

--- a/config/richter/scale_root_with_holes.yaml
+++ b/config/richter/scale_root_with_holes.yaml
@@ -1,11 +1,11 @@
 ---
-- "-1 root chord-v"
-- "+1 root chord-iv"
-- "-2+3 root chord-i"
-- "+4 root chord-iv"
-- "-4 root chord-v"
-- "+6 root chord-i"
-- "+7 root chord-iv"
-- "-8 root chord-v"
-- "+9 root chord-i"
-- "+10 root chord-iv"
+- "-1 chord-v"
+- "+1 chord-iv"
+- "-2+3 chord-i"
+- "+4 chord-iv"
+- "-4 chord-v"
+- "+6 chord-i"
+- "+7 chord-iv"
+- "-8 chord-v"
+- "+9 chord-i"
+- "+10 chord-iv"
