--- a/config/richter/chart.yaml
+++ b/config/richter/chart.yaml
@@ -11,7 +11,7 @@
 # The fields below have equal length to help editing; actual length
 # is given by first element, the single number.
 # 
-# The number of columns below should correspond to the harp; the
+# The number of columns below should match the harp; the
 # number of rows however can be chosen as needed.
 #
 ---
