--- a/config/richter/chart.yaml
+++ b/config/richter/chart.yaml
@@ -16,11 +16,13 @@
 #
 ---
 - 5
-- " +1  | +2  | -2+3| +4  | +5  | +6  | +7  | +8  | +9  | +10 |   blow"
+- "     |     |     |     |     |     |     |     |     |+10//|   full bend"
+- "     |     |     |     |     |     |     | +8/ | +9/ |+10/ |   half bend"
+- " +1  | +2  | -2+3| +4  | +5  | +6  | +7  | +8  | +9  |+10  |   blow"
 - ""
 - "--1--|--2--|--3--|--4--|--5--|--6--|--7--|--8--|--9--|-10--|-------"
 - ""
-- " -1  | -2+3| -3  | -4  | -5  | -6  | -7  | -8  | -9  | -10 |   draw"
-- " -1/ | -2/ | -3/ | -4/ |     | -6/ |     |     |     |     |   half bend"
-- "     | -2//| -3//|     |     |     |     |     |     |     |   full bend"
+- " -1  | -2+3|-3   | -4  | -5  | -6  | -7  | -8  | -9  | -10 |   draw"
+- " -1/ | -2/ |-3/  | -4/ |     | -6/ |     |     |     |     |   half bend"
+- "     | -2//|-3// |     |     |     |     |     |     |     |   full bend"
 - "     |     |-3///|     |     |     |     |     |     |     |    3/2 bend"
