rename from harp_scale_trainer to harp_trainer

--- a/tests/installer/dockerfile.fedora
+++ b/tests/installer/dockerfile.fedora
@@ -2,7 +2,7 @@ FROM fedora:34
 MAINTAINER Marc Ihm (marc@ihm.name)
 ENV DEBIAN_FRONTEND noninteractive
 RUN yum install -y sudo which ca-certificates
-COPY harp_scale_trainer /harp_scale_trainer
-WORKDIR /harp_scale_trainer
+COPY harp_trainer /harp_trainer
+WORKDIR /harp_trainer
 RUN bash ./install/install-dependencies-on-fedora.sh
-ENTRYPOINT ["./harp_scale_trainer"]
+ENTRYPOINT ["./harp_trainer"]
