--- a/tests/installer/dockerfile.fedora
+++ b/tests/installer/dockerfile.fedora
@@ -2,7 +2,7 @@ FROM fedora:34
 MAINTAINER Marc Ihm (marc@ihm.name)
 ENV DEBIAN_FRONTEND noninteractive
 RUN yum install -y sudo which ca-certificates
-COPY harp-wizard /harp-wizard
-WORKDIR /harp-wizard
+COPY harpwise /harpwise
+WORKDIR /harpwise
 RUN bash ./install/install-dependencies-on-fedora.sh
-ENTRYPOINT ["./harp-wizard"]
+ENTRYPOINT ["./harpwise"]
