--- a/config/config.ini
+++ b/config/config.ini
@@ -23,15 +23,19 @@
 [any-mode]
   type = richter
   key = c
+  display = chart-scales
   comment = note
-  display = hole
+  add_scales = chord-i,chord-iv,chord-v
   fast = true
   immediate = false
   loop = false
-  add_scales =
-
+  # used in mode licks only
+  tags_any = 
+   
 [listen]
-  display = chart-notes
+
+[quiz]
+  comment = holes-some
 
 [licks]
   comment = holes-all
@@ -45,5 +49,5 @@
   term_min_height = 24
   time_slice = 0.1
   sample_rate = 48000
-  pref_sig_def = sharp
+  pref_sig_def = flat
   pitch_detection = yinfast
