--- a/config/config.ini
+++ b/config/config.ini
@@ -10,14 +10,19 @@
 #
 # Three sections (listen, quiz, licks) specify values for different
 # modes respectively; the section [any-mode] defines default values
-# for all modes
+# for all modes, which may be overriden in one of the sections for
+# modes.
 #
 # All these values serve as defaults for the respective
 # commandline-options; e.g. the key 'comment' is used, if no option
 # '--comment' is given on the commandline
 #
-# A final section [general] has some (rather technical) values, that
-# cannot be set as options.
+# Please note, that quite some commandline-options, e.g. --partial or
+# --start-with, cannot be set in this config, as they do not lend
+# themselves to beeing set once and for all.
+#
+# A final section [general] has some technical values, that cannot be
+# set as options.
 #
 
 [any-mode]
@@ -29,8 +34,6 @@
   fast = true
   immediate = false
   loop = false
-  # used in mode licks only
-  tags_any = 
    
 [listen]
 
@@ -41,6 +44,7 @@
   comment = holes-all
   immediate = true
   loop = true
+  tags_any = 
 
 [general]
   min_freq = 50
