cleaning and comments for config

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,39 +1,62 @@
 #
 # This file contains the global configuration for harpwise
 #
-# Please do not modify; rather override some values in
-# ~/.harpwise/config.yaml
+# Please do not modify; rather override values in
+#
+#   ~/.harpwise/config.yaml
+#
+# ,which will be created on first invocation of harpwise.
 #
 
 #
 # This file has 5 sections:
 #
-# Three sections (listen, quiz, licks) specify values for different
-# modes respectively; the section [any-mode] defines default values
-# for all modes, which may be overriden in one of the sections for
-# modes.
+# The first section [any-mode] defines default values for all modes,
+# which may be overriden in one of the three sections for the
+# individual modes, [listen], [quiz] and [licks].
 #
-# All these values serve as defaults for the respective
-# commandline-options; e.g. the key 'comment' is used, if no option
-# '--comment' is given on the commandline
+# These four sections together define the interactive behaviour of
+# harpwise and may be overridden by commandline arguments: e.g. the
+# key 'comment' from this file will only be effective, if no option
+# '--comment' is given on the commandline.
 #
-# Please note, that quite some commandline-options, e.g. --partial or
-# --start-with, cannot be set in this config, as they do not lend
-# themselves to beeing set once and for all.
+# The fifth and final section [general] has values, that can only be
+# changed here and are not available as options. They mostly have
+# influence on the inner workings of harpwise.
 #
-# A final section [general] has some technical values, that cannot be
-# set as options.
+# Remark: Even if you do not change a value here and do not specify it
+# as a commandline-argument, you may change its values (at least in
+# many cases) interactively, while harpwise is running; type 'h' for
+# help on this.
+#
+# In this file, watch out for keys, that contain an underscore,
+# e.g. 'add_scales': their corresponding commandline-argument has a
+# minus instead, e.g.  '--add-scales'.
+#
+# And note, that some commandline-options, e.g. '--partial' or
+# '--start-with', cannot be stored in this config, the rationale
+# beeing, that they do not lend themselves to beeing set once and for
+# all.
 #
 
 [any-mode]
+  # Type is the second argument on the commandline (after the mode),
+  # that may be omitted in some cases, in which it is retrieved from
+  # the line below
   type = richter
+  # Key is the third commandline argument; define its default:
   key = c
+
+  #
+  # Keys, that can also be set as commandline arguments; see e.g.
+  # 'harpwise quiz' for a description
+  #
   display = chart-scales
   comment = note
   add_scales = chord-i,chord-iv,chord-v
   fast = true
   immediate = false
-  loop = false
+  loop = true
    
 [listen]
 
@@ -43,15 +66,28 @@
 [licks]
   comment = holes-all
   immediate = true
-  loop = true
   tags_any = 
 
+
 [general]
-  min_freq = 50
-  max_freq = 8000
-  term_min_width = 75
-  term_min_height = 24
-  time_slice = 0.1
-  sample_rate = 48000
+
+  # Normally the way you write your scale (with flats or with sharps),
+  # determines, what harpwise will use; only if the scale has none
+  # of them, the config below will decide
   pref_sig_def = flat
+
+  #
+  # Remark: Changing any of the values below may lead to unexpected
+  # results; your mileage may vary
+  #
+
+  # Algorithm used by aubiopitch; see its man page for choices
+  # (e.g. schmitt, fcomb, ...)
   pitch_detection = yinfast
+
+  # The sample rate we use to drive aubiopitch and arecord
+  sample_rate = 48000
+
+  # Time _slice will be multiplied with sample_rate from above to
+  # get size of aubiopitch buffer
+  time_slice = 0.1
