--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -34,7 +34,7 @@ transpose_scale_to:
     transpose the scale to another key (e.g. d).
     This would be helpful, if you want to practice e.g. the d-major
     scale on a chromatic harmonica of key c. For a diatonic harmonica,
-    however, your milage may vary, as not all notes are available
+    however, your mileage may vary, as not all notes are available
   - KEY
 
 display:
