--- a/config/richter/chart.yaml
+++ b/config/richter/chart.yaml
@@ -18,7 +18,7 @@
 - 5
 - "     |     |     |     |     |     |     |     |     |+10//|   full bend"
 - "     |     |     |     |     |     |     | +8/ | +9/ |+10/ |   half bend"
-- " +1  | +2  | -2  | +4  | +5  | +6  | +7  | +8  | +9  |+10  |   blow"
+- " +1  | +2  | +3  | +4  | +5  | +6  | +7  | +8  | +9  |+10  |   blow"
 - ""
 - "--1--|--2--|--3--|--4--|--5--|--6--|--7--|--8--|--9--|-10--|-------"
 - ""
