--- a/config/chromatic/chart.yaml
+++ b/config/chromatic/chart.yaml
@@ -16,12 +16,12 @@
 #
 ---
 - 6
-- "   +1  |   +2  |   +3  | +45-4b| +45-4b|   +6  |   +7  | +89-8b| +89-8b|  +10  |  +11  |  +12  |   blow"
-- "-------|-------|-------|-------|-------|-------|-------|-------|-------|-------|-------|-------|-------"
-- "   -1  | -2+2b |   -3  |   -4  |   -5  | -6+6b |   -7  |   -8  |   -9  |-10+10b|  -11  |  -12  |   draw"
+- " +1 | +2 | +3 | +4 | +5 | +6 | +7 | +8 | +9 | +10| +11| +12|   blow"
+- "----|----|----|----|----|----|----|----|----|----|----|----|-------"
+- " -1 | -2 | -3 | -4 | -5 | -6 | -7 | -8 | -9 | -10| -11| -12|   draw"
 - ""
-- "===1===|===2===|===3===|===4===|===5===|===6===|===7===|===8===|===9===|==10===|==11===|==12===|======="
+- "==1=|==2=|==3=|==4=|==5=|==6=|==7=|==8=|==9=|=10=|=11=|=12=|======="
 - ""
-- "   +1b | -2+2b |  +3b  |  +45b |  +45b | -6+6b |  +7b  |  +89b |  +89b |-10+10b|  +11b |  +12b | b blow"
-- "-------|-------|-------|-------|-------|-------|-------|-------|-------|-------|-------|-------|-------"
-- "  -1b  |  -2b  |  -3b  | +45-4b|  -5b  |  -6b  |  -7b  | +89-8b|  -9b  |  -10b |  -11b |  -12b | b draw"
+- " +1b| +2b| +3b| +4b| +5b| +6b| +7b| +8b| +9b|+10b|+11b|+12b| b blow"
+- "----|----|----|----|----|----|----|----|----|----|----|----|-------"
+- " -1b| -2b| -3b| -4b| -5b| -6b| -7b| -8b| -9b|-10b|-11b|-12b| b draw"
