transparent handling of time_slice and lags

--- a/config/config.ini
+++ b/config/config.ini
@@ -76,6 +76,18 @@
   # of them, the config below will decide
   pref_sig_def = flat
 
+  # Some extended eplanation on the config-variable time_slice:
+  
+  # The value of time_slice below determines, how often harpwise will
+  # detect the hole currently played; the default setting of 0.1
+  # seconds will allow at maximum 5 hole-changes to be distinguished
+  # in one second; which (apart from warbling) is faster, than most
+  # people will want to play.
+
+  # time_slice will be multiplied with sample_rate from above to
+  # get size of aubiopitch buffer
+  time_slice = 0.1
+
   #
   # Remark: Changing any of the values below may lead to unexpected
   # results; your mileage may vary
@@ -87,7 +99,3 @@
 
   # The sample rate we use to drive aubiopitch and arecord
   sample_rate = 48000
-
-  # Time _slice will be multiplied with sample_rate from above to
-  # get size of aubiopitch buffer
-  time_slice = 0.1
