fixes for chromatic

--- a/config/config.ini
+++ b/config/config.ini
@@ -44,8 +44,10 @@
   # that may be omitted in some cases, in which it is retrieved from
   # the line below
   type = richter
-  # Key is the third commandline argument; define its default:
+  # Key is the third commandline argument; define its default
   key = c
+  # likewise for scale
+  scale = blues
 
   #
   # Keys, that can also be set as commandline arguments; see e.g.
@@ -76,15 +78,14 @@
   # of them, the config below will decide
   pref_sig_def = flat
 
-  # Some extended eplanation on the config-variable time_slice:
   
   # The value of time_slice below determines, how often harpwise will
   # detect the hole currently played; the default setting of 0.1
   # seconds will allow at maximum 5 hole-changes to be distinguished
-  # in one second; which (apart from warbling) is faster, than most
+  # in one second; which (apart from warbling) is faster, than many
   # people will want to play.
 
-  # time_slice will be multiplied with sample_rate from above to
+  # time_slice will be multiplied with sample_rate below to
   # get size of aubiopitch buffer
   time_slice = 0.1
 
@@ -97,5 +98,5 @@
   # (e.g. schmitt, fcomb, ...)
   pitch_detection = yinfast
 
-  # The sample rate we use to drive aubiopitch and arecord
+  # The sample rate used to drive aubiopitch and arecord
   sample_rate = 48000
