reports for all and selected licks

--- a/config/config.ini
+++ b/config/config.ini
@@ -70,6 +70,8 @@
   immediate = true
   tags_any = 
 
+# Please note, that there is no section [report], because this mode 
+# simply takes all its values from [licks]
 
 [general]
 
