--- a/config/config.ini
+++ b/config/config.ini
@@ -100,5 +100,16 @@
   # (e.g. schmitt, fcomb, ...)
   pitch_detection = yinfast
 
+  # Any extra arguments, that need to be passed to arecord in your
+  # specific setup (an example would be: -D pulse); try this if
+  # harpwise fails and complains about arecord. In such a case you may
+  # need to experiment with arecord directly from the
+  # commandline. Once you have found some relevant extra options, you
+  # may put them here.
+  arecord_extra =
+
+  # Any extra argument that aplay needs:
+  aplay_extra = 
+
   # The sample rate used to drive aubiopitch and arecord
   sample_rate = 48000
