extra_args for sox play

--- a/config/config.ini
+++ b/config/config.ini
@@ -100,16 +100,19 @@
   # (e.g. schmitt, fcomb, ...)
   pitch_detection = yinfast
 
-  # Any extra arguments, that need to be passed to arecord in your
-  # specific setup (an example would be: -D pulse); try this if
-  # harpwise fails and complains about arecord. In such a case you may
-  # need to experiment with arecord directly from the
-  # commandline. Once you have found some relevant extra options, you
-  # may put them here.
-  arecord_extra =
+  # Any extra arguments, that need to be passed to arecord (from the
+  # alsa package) in your specific setup (an example would be: -D
+  # pulse); try this if harpwise fails and complains about arecord. In
+  # such a case you may need to experiment with arecord directly from
+  # the commandline. Once you have found some relevant extra options,
+  # you may put them here.
+  alsa_arecord_extra =
 
-  # Any extra argument that aplay needs:
-  aplay_extra = 
+  # Any extra arguments, that aplay (from the alsa package) needs:
+  alsa_aplay_extra = 
 
+  # Any extra argument, that play (from the sox package) needs:
+  sox_play_extra =
+  
   # The sample rate used to drive aubiopitch and arecord
   sample_rate = 48000
