print and play note progressions; better volume control

--- a/config/config.ini
+++ b/config/config.ini
@@ -70,6 +70,11 @@
   immediate = true
   tags_any = 
 
+[calibrate]
+  # db used for volume clause when doing auto calibration
+  # highet values give lauder samples
+  auto_synth_db = -27
+  
 # Please note, that there is no section [report], because this mode 
 # simply takes all its values from [licks]
 
