--- a/config/intervals.yaml
+++ b/config/intervals.yaml
@@ -2,12 +2,18 @@
 '0':
   - Tonica
   - Ton
+  - first
 '4':
   - maj Third
   - mT
+  - third
 '7':
   - per Fifth
   - pF
+  - fifth
+'9':
+  - flat Seventh
+  - fS
 '12':
   - Octave
   - Oct
