just sox, no more alsa (at least directly)

--- a/config/config.ini
+++ b/config/config.ini
@@ -72,8 +72,8 @@
 
 [calibrate]
   # db used for volume clause when doing auto calibration
-  # highet values give lauder samples
-  auto_synth_db = -18
+  # higher values give louder samples
+  auto_synth_db = -3
   
 # Please note, that there is no section [report], because this mode 
 # simply takes all its values from [licks]
@@ -105,19 +105,13 @@
   # (e.g. schmitt, fcomb, ...)
   pitch_detection = yinfast
 
-  # Any extra arguments, that need to be passed to arecord (from the
-  # alsa package) in your specific setup (an example would be: -D
-  # pulse); try this if harpwise fails and complains about arecord. In
-  # such a case you may need to experiment with arecord directly from
-  # the commandline. Once you have found some relevant extra options,
-  # you may put them here.
-  alsa_arecord_extra =
-
-  # Any extra arguments, that aplay (from the alsa package) needs:
-  alsa_aplay_extra = 
-
-  # Any extra argument, that play (from the sox package) needs:
+  # Any extra argument, that play or rec (from the sox package) need.
+  # Try these if harpwise fails and complains about programs 'play' or
+  # 'rec' . In such a case you may need to experiment with play or rec
+  # directly from the commandline. Once you have found some relevant
+  # extra options, you may put them here.
   sox_play_extra =
+  sox_rec_extra =
   
-  # The sample rate used to drive aubiopitch and arecord
+  # The sample rate used to drive aubiopitch and sox
   sample_rate = 48000
