--- a/config/config.ini
+++ b/config/config.ini
@@ -96,6 +96,10 @@
   # get size of aubiopitch buffer
   time_slice = 0.1
 
+  # within the length of each aubiopitch buffer, a number of frequency
+  # values will be computed, given by this value
+  values_per_slice = 4
+
   #
   # Remark: Changing any of the values below may lead to unexpected
   # results; your mileage may vary
