handling and different mcomb method for aubiopitch

--- a/config/config.ini
+++ b/config/config.ini
@@ -106,8 +106,9 @@
   #
 
   # Algorithm used by aubiopitch; see its man page for choices
-  # (e.g. schmitt, fcomb, ...)
-  pitch_detection = yinfast
+  # (e.g. yinfft, yinfast, mcomb, ...)
+  pitch_detection = mcomb
+
 
   # Any extra argument, that play or rec (from the sox package) need.
   # Try these if harpwise fails and complains about programs 'play' or
