--- a/config/config.ini
+++ b/config/config.ini
@@ -107,7 +107,7 @@
 
   # Algorithm used by aubiopitch; see its man page for choices
   # (e.g. yinfft, yinfast, mcomb, ...)
-  pitch_detection = mcomb
+  pitch_detection = yinfast
 
 
   # Any extra argument, that play or rec (from the sox package) need.
