--- a/config/config.ini
+++ b/config/config.ini
@@ -87,18 +87,10 @@
 
   
   # The value of time_slice below determines, how often harpwise will
-  # detect the hole currently played; the default setting of 0.1
-  # seconds will allow at maximum 5 hole-changes to be distinguished
-  # in one second; which (apart from warbling) is faster, than many
-  # people will want to play.
-
-  # time_slice will be multiplied with sample_rate below to
-  # get size of aubiopitch buffer
-  time_slice = 0.1
-
-  # within the length of each aubiopitch buffer, a number of frequency
-  # values will be computed, given by this value
-  values_per_slice = 4
+  # detect the hole currently played; it is mostly used to compute
+  # buffer sizes for aubopitch; its values can be
+  # short, medium and long
+  time_slice = medium
 
   #
   # Remark: Changing any of the values below may lead to unexpected
