--- a/resources/opt2desc.yaml
+++ b/resources/opt2desc.yaml
@@ -156,35 +156,21 @@ partial:
 time_slice:
 
   - |
-    time slice (in fractional seconds) for
-    sensing holes played. In each time slice values_per_slice (see
-    below) holes can be recognized. A typical value is 0.1 (seconds),
-    but if your computer is slow, a larger value (e.g. 0.2) might be
-    more appropriate. If your computer is fast, a lower value
-    (e.g. 0.05) might work too, which will allow harpwise to follow
-    your playing faster (e.g. during warbles).
+    time slice (one of short, medium, long) for sensing holes
+    played. In each time slice a predefined number of holes can be
+    recognized. The default value is 'medium', but if your computer is
+    slow, 'long' might be more appropriate. If your computer is fast,
+    'short' might work too, which will allow harpwise to follow your
+    playing faster (e.g. during warbles).
 
-    However, if you choose a value that is lower than appropriate,
-    harpwise will lag behind and show holes only (long) after you
+    However, if you choose 'short' and your computer cannot keep up,
+    harpwise will lag behind and show holes only (long) after you have
     played them; in such cases harpwise will issue a warning message
     now and then.
 
-    See also option --values-per-slice for a similar but inverse
-    effect.
-
     If lagging occurs, you will get a detailed message on program
     termination, that will allow to judge the situation.
-  - SECONDS
-
-values_per_slice:
-
-  - |
-    number of frequency values measured by 
-    aubiopitch per time slice (see also that option). Raising this
-    value makes harpwise react faster to your playing, e.g. during
-    warbles, but raising it to far might make lag-warnings appear,
-    because harpwise would no longer be able to follow.
-  - COUNT
+  - SHORT_MEDIUM_LONG
 
 terse:
 
